# key-finder

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
scripts/: release.sh
src/: application.rs  cli.rs  constants.rs  domain.rs  lib.rs  main.rs  notifications.rs  runtime.rs  storage.rs
src/application/: importers.rs  notification_scheduler.rs  notification_types.rs  notifications.rs  runtime_settings.rs  shortcut_center.rs  shortcut_focus.rs
src/application/importers/: collect.rs  json.rs  parsers.rs
src/application/importers/parsers/: custom_csv.rs  idea.rs  vscode.rs  zed.rs
src/application/shortcut_center/: catalog_service.rs  command_service.rs  shortcut_cache.rs
src/cli/: commands.rs  options.rs
src/domain/: app_norm.rs  errors.rs  known_apps.rs  models.rs  shortcut_norm.rs
src/domain/shortcut_norm/: manual.rs  parse.rs  predefined.rs  render.rs  shared.rs
src/notifications/: notifier.rs
src/runtime/: macos.rs  terminal.rs
src/runtime/macos/: notifications.rs  platform.rs  ui.rs
src/runtime/macos/platform/: frontmost.rs  import_sources.rs
src/runtime/macos/ui/: app_focus.rs  dialogs.rs  modal.rs  settings.rs  shortcut_center.rs  tray.rs
src/storage/: models.rs  sqlite.rs
src/storage/migrations/: 0001_initial.sql  0002_seed_data.sql  0003_app_importers.sql  0004_seed_app_importers.sql
src/storage/sqlite/: apps_repository.rs  notification_snapshot_repository.rs  settings_repository.rs  shortcut_catalog_repository.rs  shortcut_imports_repository.rs  shortcuts_repository.rs  sqlite_db.rs
testdata/importers/: ghostty-shortcuts.csv
(+21 files in other folders)
