[package]
name = "key-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
dirs = "6.0"
humantime = "2.1"
json5 = "0.4"
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rusqlite = { version = "0.33", features = ["bundled"] }
rand = "0.10.0"
zip = { version = "2", default-features = false }

[package.metadata.bundle]
name = "Key Finder"
identifier = "com.zelenya.keyfinder"
category = "public.app-category.productivity"
short_description = "A friendly reminder to use keyboard shortcuts"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSAlert", "NSApplication", "NSButton", "NSControl", "NSEvent", "NSGraphics", "NSImage", "NSMenu", "NSMenuItem", "NSOpenPanel", "NSPanel", "NSPathControl", "NSPopUpButton", "NSProgressIndicator", "NSResponder", "NSRunningApplication", "NSSavePanel", "NSScrollView", "NSSplitView", "NSTableColumn", "NSTableView", "NSText", "NSTextField", "NSTextView", "NSToolbar", "NSToolbarItem", "NSUserInterfaceItemIdentification", "NSView", "NSWindow", "NSWorkspace", "block2"] }
objc2-foundation = "0.3"
tray-icon = "0.21"

[dev-dependencies]
tempfile = "3.14"
